--- a/index.html
+++ b/index.html
@@ -34,38 +34,40 @@
 </head>
 
 <body>
-    <nav>
-        <div class="nav-desktop">
-            <div class="logo-container">
-                <a href="index.html">
-                    <img width="150px" height="89.57px" src="images/sredikucu_logo.webp" decoding="async" loading="lazy"
-                        alt="sredikucu.rs logo">
-                </a>
-            </div>
-            <div class="categories">
-                <p>
-                    <a href="kuca.html">Kuća</a>
-                    <a href="stan.html">Stan</a>
-                    <a href="dvoriste.html">Dvorište</a>
-                    <a class="call-button" href="kontakt.html">
-                        Kontakt
+    <header>
+        <nav>
+            <div class="nav-desktop">
+                <div class="logo-container">
+                    <a href="index.html">
+                        <img width="150px" height="89.57px" src="images/sredikucu_logo.webp" decoding="async"
+                            loading="lazy" alt="sredikucu.rs logo">
                     </a>
-                </p>
+                </div>
+                <div class="categories">
+                    <p>
+                        <a href="kuca.html">Kuća</a>
+                        <a href="stan.html">Stan</a>
+                        <a href="dvoriste.html">Dvorište</a>
+                        <a class="call-button" href="kontakt.html">
+                            Kontakt
+                        </a>
+                    </p>
+                </div>
             </div>
-        </div>
-        <div id="menuToggle" class="nav-mobile">
-            <div class="hamburger"></div>
-            <span></span>
-            <span></span>
-            <span></span>
-            <ul id="menu">
-                <li><a href="kuca.html">Kuća</a></li>
-                <li><a href="stan.html">Stan</a></li>
-                <li><a href="dvoriste.html">Dvorište</a></li>
-                <li><a href="kontakt.html"> Kontakt </a></li>
-            </ul>
-        </div>
-    </nav>
+            <div id="menuToggle" class="nav-mobile">
+                <div class="hamburger"></div>
+                <span></span>
+                <span></span>
+                <span></span>
+                <ul id="menu">
+                    <li><a href="kuca.html">Kuća</a></li>
+                    <li><a href="stan.html">Stan</a></li>
+                    <li><a href="dvoriste.html">Dvorište</a></li>
+                    <li><a href="kontakt.html"> Kontakt </a></li>
+                </ul>
+            </div>
+        </nav>
+    </header>
     <main class="blog archive">
 
         <!-- 0 -->
@@ -225,6 +227,28 @@
         </div>
 
         <!-- 8 -->
+        <div class="related-xxl">
+            <strong>Kako urediti terasu u stanu i uživati u lepom vremenu</strong>
+            <div class="meta">
+                <span>Ažuriran 14 Jula, 2023</span>
+                <span>sredikucu.rs</span>
+                <span>Stan</span>
+            </div>
+            <img src="images/kako-urediti-terasu-u-stanu-i-uzivati-u-lepom-vremenu-naslovna.webp" decoding="async"
+                loading="lazy" alt="Kako urediti terasu u stanu i uživati u lepom vremenu, slika terase">
+            <p>
+                Uživanje na terasi stana u lepom vremenu može postati svakodnevna radost uz pravilno uređenje. Bez
+                obzira na veličinu terase, postoji niz kreativnih ideja koje je mogu pretvoriti u oazu opuštanja. Od
+                kompaktnog nameštaja za manje terase do garnitura za sedenje i ležaljki za veće prostore, opcije su
+                raznovrsne. Oplemenjivanje terase zelenilom i ukrasnim elementima dodatno će obogatiti prostor.
+                Inspiracija može doći iz različitih izvora - galerija fotografija, prijatelja ili vaše vlastite mašte.
+                Pravilnim odabirom dekoracije, osvetljenja i biljaka, terasa može postati omiljeno mesto za opuštanje i
+                uživanje u svakom trenutku.
+            </p>
+            <a class="main-button" href="kako-urediti-terasu-u-stanu-i-uzivati-u-lepom-vremenu.html">Pročitaj članak</a>
+        </div>
+
+        <!-- 9 -->
 
     </main>
     <footer class="author-box">
