--- a/sve-sto-treba-da-znate-o-pripremi-stana-za-iznajmljivanje.html
+++ b/sve-sto-treba-da-znate-o-pripremi-stana-za-iznajmljivanje.html
@@ -37,40 +37,40 @@
 </head>
 
 <body>
-    <nav>
-        <div class="nav-desktop">
-            <div class="logo-container">
-                <a href="index.html">
-                    <img width="150px" height="89.57px" src="images/sredikucu_logo.webp" decoding="async" loading="lazy"
-                        alt="sredikucu.rs logo">
-                </a>
-            </div>
-            <div class="categories">
-                <p>
-                    <a href="kuca.html">Kuća</a>
-                    <a href="stan.html">Stan</a>
-                    <a href="dvoriste.html">Dvorište</a>
-                    <a class="call-button" href="kontakt.html">
-                        Kontakt
+    <header>
+        <nav>
+            <div class="nav-desktop">
+                <div class="logo-container">
+                    <a href="index.html">
+                        <img width="150px" height="89.57px" src="images/sredikucu_logo.webp" decoding="async"
+                            loading="lazy" alt="sredikucu.rs logo">
                     </a>
-                </p>
+                </div>
+                <div class="categories">
+                    <p>
+                        <a href="kuca.html">Kuća</a>
+                        <a href="stan.html">Stan</a>
+                        <a href="dvoriste.html">Dvorište</a>
+                        <a class="call-button" href="kontakt.html">
+                            Kontakt
+                        </a>
+                    </p>
+                </div>
             </div>
-        </div>
-        <div id="menuToggle" class="nav-mobile">
-            <input type="checkbox" />
-            <span></span>
-            <span></span>
-            <span></span>
-            <ul id="menu">
-                <li><a href="kuca.html">Kuća</a></li>
-                <li><a href="stan.html">Stan</a></li>
-                <li><a href="dvoriste.html">Dvorište</a></li>
-                <li><a class="call-button" href="kontakt.html">
-                        Kontakt
-                    </a></li>
-            </ul>
-        </div>
-    </nav>
+            <div id="menuToggle" class="nav-mobile">
+                <div class="hamburger"></div>
+                <span></span>
+                <span></span>
+                <span></span>
+                <ul id="menu">
+                    <li><a href="kuca.html">Kuća</a></li>
+                    <li><a href="stan.html">Stan</a></li>
+                    <li><a href="dvoriste.html">Dvorište</a></li>
+                    <li><a href="kontakt.html"> Kontakt </a></li>
+                </ul>
+            </div>
+        </nav>
+    </header>
     <main>
         <div class="spacer-10"></div>
         <article class="blog" id="sve-sto-treba-da-znate-o-pripremi-stana-za-iznajmljivanje-naslovna" role="article">
@@ -544,6 +544,7 @@
             </div>
         </div>
     </footer>
+    <script src="scripts/app.js"></script>
 </body>
 
 </html>
