--- a/kako-urediti-terasu-u-stanu-i-uzivati-u-lepom-vremenu.html
+++ b/kako-urediti-terasu-u-stanu-i-uzivati-u-lepom-vremenu.html
@@ -31,7 +31,7 @@
     <meta property="og:type" content="website" />
     <meta property="og:url"
         content="https://www.sredikucu.rs/kako-urediti-terasu-u-stanu-i-uzivati-u-lepom-vremenu.html" />
-    <!-- <meta property="og:image" content="https://www.sredikucu.rs/images/logo.png" /> -->
+    <meta property="og:image" content="https://sredikucu.rs/images/icon.webp" />
 </head>
 
 <body>
