--- a/sve-sto-treba-da-znate-o-pripremi-stana-za-iznajmljivanje.html
+++ b/sve-sto-treba-da-znate-o-pripremi-stana-za-iznajmljivanje.html
@@ -13,8 +13,7 @@
     </script>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>SrediKucu - Sve što treba da znate o pripremi stana
-        za iznajmljivanje</title>
+    <title>SrediKucu - Priprema stana za iznajmljivanje</title>
     <link rel="icon" type="image/x-icon" href="favicon.ico" />
     <link rel="stylesheet" href="style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -25,15 +24,14 @@
     <meta name="description"
         content="SrediKucu - iznajmljivanje stana. Saveti i ideje za sredjivanje i prepremu stana za izdavanje za najbolje rezultate. Spremite stan za AirBnb ili Booking">
     </meta>
-    <meta property="og:title" content="SrediKucu - Sve što treba da znate o pripremi stana
-    za iznajmljivanje" />
+    <meta property="og:title" content="SrediKucu - Priprema stana za iznajmljivanje" />
     <meta property="og:description"
         content="SrediKucu - iznajmljivanje stana. Saveti i ideje za sredjivanje i prepremu stana za izdavanje za najbolje rezultate. Spremite stan za AirBnb ili Booking" />
     <meta property="og:site_name" content="SrediKucu" />
     <meta property="og:type" content="website" />
     <meta property="og:url"
         content="https://www.sredikucu.rs/sve-sto-treba-da-znate-o-pripremi-stana-za-iznajmljivanje.html" />
-    <!-- <meta property="og:image" content="https://www.sredikucu.rs/images/logo.png" /> -->
+    <meta property="og:image" content="https://sredikucu.rs/images/icon.webp" />
 </head>
 
 <body>
