--- a/vodic-za-renoviranje-kupatila-u-2023-godini.html
+++ b/vodic-za-renoviranje-kupatila-u-2023-godini.html
@@ -30,7 +30,7 @@
     <meta property="og:site_name" content="SrediKucu" />
     <meta property="og:type" content="website" />
     <meta property="og:url" content="https://www.sredikucu.rs/vodic-za-renoviranje-kupatila-u-2023-godini.html" />
-    <!-- <meta property="og:image" content="https://www.sredikucu.rs/images/logo.png" /> -->
+    <meta property="og:image" content="https://sredikucu.rs/images/icon.webp" />
 </head>
 
 <body>
@@ -78,8 +78,8 @@
                 <span>Kupatila</span>
             </div>
             <div class="image">
-                <img src="images/10-zlatnih-pravila-za-opremanje-doma-naslovna.webp" decoding="async"
-                    alt="Primer 10 zlatnih pravila za opremanje doma">
+                <img src="images/vodic-za-renoviranje-kupatila-u-2023-godini-naslovna.webp" decoding="async"
+                    alt="Najbolji vodič za renoviranje kupatila u 2023. godini">
             </div>
             <p>
                 Kupatilo predstavlja jednu od najvažnijih prostorija u našem domu - mesto gde se
