--- a/kako-da-kreirate-udoban-i-prijatan-dnevni-boravak.html
+++ b/kako-da-kreirate-udoban-i-prijatan-dnevni-boravak.html
@@ -30,7 +30,7 @@
     <meta property="og:site_name" content="SrediKucu" />
     <meta property="og:type" content="website" />
     <meta property="og:url" content="https://www.sredikucu.rs/kako-da-kreirate-udoban-i-prijatan-dnevni-boravak.html" />
-    <!-- <meta property="og:image" content="https://www.sredikucu.rs/images/logo.png" /> -->
+    <meta property="og:image" content="https://sredikucu.rs/images/icon.webp" />
 </head>
 
 <body>
