--- a/obezbedjenje-objekta-kako-zastititi-vas-dom.html
+++ b/obezbedjenje-objekta-kako-zastititi-vas-dom.html
@@ -30,7 +30,7 @@
     <meta property="og:site_name" content="SrediKucu" />
     <meta property="og:type" content="website" />
     <meta property="og:url" content="https://www.sredikucu.rs/obezbedjenje-objekta-kako-zastititi-vas-dom.html" />
-    <!-- <meta property="og:image" content="https://www.sredikucu.rs/images/logo.png" /> -->
+    <meta property="og:image" content="https://sredikucu.rs/images/icon.webp" />
 </head>
 
 <body>
