--- a/index.html
+++ b/index.html
@@ -22,11 +22,11 @@
         href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap"
         rel="stylesheet">
     <meta name="description"
-        content="Blog sredikucu.rs nudi praktične savete za uređenje vašeg doma, kuće ili stana. Sve za kuću, enterijer ideje, izdavanje, opremanje sve na SrediKucu">
+        content="Blog sredikucu.rs nudi praktične savete za uređenje vašeg doma, kuće ili stana. Ideje, inspiracija, uputstva na Sredi Kucu">
     </meta>
     <meta property="og:title" content="SrediKucu - Saveti za uređenje Vašeg doma" />
     <meta property="og:description"
-        content="Blog sredikucu.rs nudi praktične savete za uređenje vašeg doma, kuće ili stana. Sve za kuću, enterijer ideje, izdavanje, opremanje sve na SrediKucu" />
+        content="Blog sredikucu.rs nudi praktične savete za uređenje vašeg doma, kuće ili stana. Ideje, inspiracija, uputstva na Sredi Kucu" />
     <meta property="og:site_name" content="SrediKucu" />
     <meta property="og:type" content="website" />
     <meta property="og:url" content="https://www.sredikucu.rs/" />
@@ -69,6 +69,8 @@
         </nav>
     </header>
     <main class="blog archive">
+        <h1>Sredi kuću blog</h1>
+        <h2>Svi članci</h2>
 
         <!-- 0 -->
         <div class="related-xxl">
