--- a/kontakt.html
+++ b/kontakt.html
@@ -69,7 +69,8 @@
         </nav>
     </header>
     <main class="blog archive">
-        <strong class="categorie">Kontakt</strong>
+        <h1>Sredi kuću blog</h1>
+        <h2>Kontakt</h2>
 
     </main>
     <footer class="author-box">
