--- a/kuca.html
+++ b/kuca.html
@@ -69,7 +69,8 @@
         </nav>
     </header>
     <main class="blog archive">
-        <strong class="categorie">Kuća</strong>
+        <h1>Sredi kuću blog</h1>
+        <h2>Sređivanje Kuće</h2>
 
         <!-- 1 -->
         <div class="related-xxl">
