--- a/stan.html
+++ b/stan.html
@@ -69,7 +69,8 @@
         </nav>
     </header>
     <main class="blog archive">
-        <strong class="categorie">Stan</strong>
+        <h1>Sredi kuću blog</h1>
+        <h2>Sređivanje Stana</h2>
 
         <!-- 0 -->
         <div class="related-xxl">
