--- a/dvoriste.html
+++ b/dvoriste.html
@@ -69,7 +69,8 @@
         </nav>
     </header>
     <main class="blog archive">
-        <strong class="categorie">Dvorište</strong>
+        <h1>Sredi kuću blog</h1>
+        <h2>Sređivanje Dvorišta</h2>
 
         <!-- 1 -->
         <div class="related-xxl">
